--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -117,7 +117,7 @@ periodics:
       - "1.0.7"
       - "--mesh"
       timeout: 100
-    - custom-job: istio-1.0.7-no-mesh
+    - custom-job: istio-1.0.7-nomesh
       cron: "22 */2 * * *" # Run every other hour and twenty-two minute
       command:
       - "./test/e2e-tests.sh"
@@ -135,7 +135,7 @@ periodics:
       - "1.1.2"
       - "--mesh"
       timeout: 100
-    - custom-job: istio-1.1.2-no-mesh
+    - custom-job: istio-1.1.2-nomesh
       cron: "52 */2 * * *" # Run every other hour and fifty-two minute
       command:
       - "./test/e2e-tests.sh"
