--- a/tools/monitoring/gke_deployment/monitoring_service.yaml
+++ b/tools/monitoring/gke_deployment/monitoring_service.yaml
@@ -41,23 +41,14 @@ spec:
       containers:
       - name: monitoring-app
         image: gcr.io/knative-tests/test-infra/monitoring:latest
+        command: ["/monitoring",
+                  "--monitoring-database-user=/secrets/cloudsql/monitoringdb/username",
+                  "--monitoring-database-password=/secrets/cloudsql/monitoringdb/password"]
         env:
         - name: MONITORING_DB_NAME
           value: monitoring
-        - name: MONITORING_DB_HOST
-          value: "127.0.0.1"
-        - name: MONITORING_DB_PORT
-          value: "3306"
-        - name: MONITORING_DB_USER
-          valueFrom:
-            secretKeyRef:
-              name: monitoring-db-credentials
-              key: username
-        - name: MONITORING_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: monitoring-db-credentials
-              key: password
+        - name: MONITORING_DB_INSTANCE
+          value: knative-tests:us-central1:knative-monitoring
         # This setting makes nodes pull the docker image every time before
         # starting the pod. This is useful when debugging, but should be turned
         # off in production.
@@ -68,16 +59,8 @@ spec:
           containerPort: 8080
         volumeMounts:
         - name: monitoring-db-credentials
-          mountPath: "/etc/monitoring-db-credentials"
+          mountPath: /secrets/cloudsql/monitoringdb
           readOnly: true
-      - name: cloudsql-proxy
-        image: gcr.io/cloudsql-docker/gce-proxy:1.11
-        command: ["/cloud_sql_proxy",
-                  "-instances=knative-tests:us-central1:knative-monitoring=tcp:3306",
-                  ]
-        securityContext:
-          runAsUser: 2  # non-root user
-          allowPrivilegeEscalation: false
       volumes:
       - name: monitoring-db-credentials
         secret:
