--- a/tools/monitoring/gke_deployment/monitoring_service.yaml
+++ b/tools/monitoring/gke_deployment/monitoring_service.yaml
@@ -44,6 +44,9 @@ spec:
         command: ["/monitoring",
                   "--database-name=monitoring",
                   "--database-instance='knative-tests:us-central1:knative-monitoring'"]
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /secrets/google-app-credential/knative-monitoring-credential.json
         # This setting makes nodes pull the docker image every time before
         # starting the pod. This is useful when debugging, but should be turned
         # off in production.
@@ -58,6 +61,8 @@ spec:
           readOnly: true
         - name: sender-email-credentials
           mountPath: /secrets/sender-email
+        - name: google-app-credentials
+          mountPath: /secrets/google-app-credential/
           readOnly: true
       volumes:
       - name: monitoring-db-credentials
@@ -66,3 +71,6 @@ spec:
       - name: sender-email-credentials
         secret:
           secretName: sender-email-credentials
+      - name: google-app-credentials
+        secret:
+          secretName: google-app-credentials
