--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -226,6 +226,49 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
+  - name: pull-knative-serving-smoke-tests
+    agent: kubernetes
+    context: pull-knative-serving-smoke-tests
+    always_run: true
+    rerun_command: "/test pull-knative-serving-smoke-tests"
+    trigger: "(?m)^/test (all|pull-knative-serving-smoke-tests),?(\\s+|$)"
+    skip_branches:
+    - "release-0.1"
+    - "release-0.2"
+    - "release-0.3"
+    - "release-0.4"
+    - "release-0.5"
+    - "release-0.6"
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        imagePullPolicy: Always
+        args:
+        - "--scenario=kubernetes_execute_bazel"
+        - "--clean"
+        - "--job=$(JOB_NAME)"
+        - "--repo=github.com/$(REPO_OWNER)/$(REPO_NAME)=$(PULL_REFS)"
+        - "--root=/go/src"
+        - "--service-account=/etc/test-account/service-account.json"
+        - "--upload=gs://knative-prow/pr-logs"
+        - "--" # end bootstrap args, scenario args below
+        - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-smoke-tests.sh"
+        volumeMounts:
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: test-account
+        secret:
+          secretName: test-account
   - name: pull-knative-serving-go-coverage
     agent: kubernetes
     context: pull-knative-serving-go-coverage
