--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -27,6 +27,17 @@ presubmits:
       args:
       - "--run-test"
       - "./test/e2e-upgrade-tests.sh"
+    - custom-test: smoke-tests
+      skip_branches:  # Skip these branches, as test isn't available.
+      - release-0.1
+      - release-0.2
+      - release-0.3
+      - release-0.4
+      - release-0.5
+      - release-0.6
+      args:
+      - "--run-test"
+      - "./test/e2e-smoke-tests.sh"
     - go-coverage: true
       go-coverage-threshold: 80
     - custom-test: perf-tests
